python/cuda_cccl/cuda/stf/_experimental/_stf_bindings_impl.pyx


    ctypedef struct stf_while_scope_handle_t
    ctypedef stf_while_scope_handle_t* stf_while_scope_handle
    ctypedef struct stf_repeat_scope_handle_t
    ctypedef stf_repeat_scope_handle_t* stf_repeat_scope_handle

    stf_while_scope_handle stf_stackable_push_while(stf_ctx_handle ctx)
    void stf_stackable_pop_while(stf_while_scope_handle scope)
    uint64_t stf_while_scope_get_cond_handle(stf_while_scope_handle scope)
    stf_repeat_scope_handle stf_stackable_push_repeat(stf_ctx_handle ctx, size_t count)
    void stf_stackable_pop_repeat(stf_repeat_scope_handle scope)

    ctypedef struct stf_launchable_graph_handle_t
    ctypedef stf_launchable_graph_handle_t* stf_launchable_graph_handle

    stf_launchable_graph_handle stf_stackable_pop_prologue(stf_ctx_handle ctx)
    void stf_stackable_pop_epilogue(stf_ctx_handle ctx)
    void stf_launchable_graph_launch(stf_launchable_graph_handle h) nogil
    cudaGraphExec_t stf_launchable_graph_exec(stf_launchable_graph_handle h)
    cudaStream_t stf_launchable_graph_stream(stf_launchable_graph_handle h)
    cudaGraph_t stf_launchable_graph_graph(stf_launchable_graph_handle h)
    void stf_launchable_graph_destroy(stf_launchable_graph_handle h)

    ctypedef struct stf_launchable_graph_shared_t
    ctypedef stf_launchable_graph_shared_t* stf_launchable_graph_shared

    int stf_stackable_pop_prologue_shared(stf_ctx_handle ctx, stf_launchable_graph_shared* out)
    int stf_launchable_graph_shared_dup(stf_launchable_graph_shared h, stf_launchable_graph_shared* out)
    void stf_launchable_graph_shared_free(stf_launchable_graph_shared h) nogil
    int stf_launchable_graph_shared_valid(stf_launchable_graph_shared h)
    void stf_launchable_graph_shared_launch(stf_launchable_graph_shared h) nogil
    cudaGraphExec_t stf_launchable_graph_shared_exec(stf_launchable_graph_shared h)
    cudaStream_t stf_launchable_graph_shared_stream(stf_launchable_graph_shared h)
    cudaGraph_t stf_launchable_graph_shared_graph(stf_launchable_graph_shared h)

    cdef enum stf_compare_op:
        STF_CMP_GT
        STF_CMP_LT
        STF_CMP_GE
        STF_CMP_LE

    cdef enum stf_dtype:
        STF_DTYPE_FLOAT32
        STF_DTYPE_FLOAT64
        STF_DTYPE_INT32
        STF_DTYPE_INT64

    void stf_stackable_while_cond_scalar(
        stf_ctx_handle ctx,
        stf_while_scope_handle scope,
        stf_logical_data_handle ld,
        stf_compare_op op,
        double threshold,
        stf_dtype dtype)

    stf_logical_data_handle stf_stackable_logical_data_with_place(
        stf_ctx_handle ctx, void* addr, size_t sz, stf_data_place_handle dplace)
    stf_logical_data_handle stf_stackable_logical_data(stf_ctx_handle ctx, void* addr, size_t sz)
    stf_logical_data_handle stf_stackable_logical_data_empty(stf_ctx_handle ctx, size_t length)
    stf_logical_data_handle stf_stackable_logical_data_no_export_empty(stf_ctx_handle ctx, size_t length)
    stf_logical_data_handle stf_stackable_token(stf_ctx_handle ctx)
    void stf_stackable_logical_data_set_symbol(stf_logical_data_handle ld, const char* symbol)
    void stf_stackable_logical_data_set_read_only(stf_logical_data_handle ld)
    void stf_stackable_logical_data_push(
        stf_logical_data_handle ld, stf_access_mode m, stf_data_place_handle dplace)
    void stf_stackable_logical_data_destroy(stf_logical_data_handle ld)
    void stf_stackable_token_destroy(stf_logical_data_handle ld)

    stf_task_handle stf_stackable_task_create(stf_ctx_handle ctx)
    void stf_stackable_task_add_dep(
        stf_ctx_handle ctx, stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m)
    void stf_stackable_task_add_dep_with_dplace(
        stf_ctx_handle ctx, stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m, stf_data_place_handle data_p)

    stf_host_launch_handle stf_stackable_host_launch_create(stf_ctx_handle ctx)
    void stf_stackable_host_launch_add_dep(
        stf_ctx_handle ctx, stf_host_launch_handle h, stf_logical_data_handle ld, stf_access_mode m)
    void stf_stackable_host_launch_submit(stf_host_launch_handle h, stf_host_callback_fn callback)
    void stf_stackable_host_launch_destroy(stf_host_launch_handle h)

# ctypes mirror structs for the partition mapper callback.
# The C API uses an out-pointer signature for stf_get_executor_fn:
#   void (*)(stf_pos4* result, stf_pos4 data_coords, stf_dim4 data_dims, stf_dim4 grid_dims)
# This is directly representable as a ctypes CFUNCTYPE.
class _mapper_pos4(ctypes.Structure):
    _fields_ = [("x", ctypes.c_int64), ("y", ctypes.c_int64),
                ("z", ctypes.c_int64), ("t", ctypes.c_int64)]

class _mapper_dim4(ctypes.Structure):
    _fields_ = [("x", ctypes.c_uint64), ("y", ctypes.c_uint64),
                ("z", ctypes.c_uint64), ("t", ctypes.c_uint64)]

_mapper_cfunc_type = ctypes.CFUNCTYPE(
    None, ctypes.POINTER(_mapper_pos4), _mapper_pos4, _mapper_dim4, _mapper_dim4)


def _make_mapper_callback(mapper):
    """Wrap a Python partitioner as a C function pointer for stf_data_place_composite.

    Returns (callback_object, c_function_pointer_as_int).
    The caller must prevent GC of callback_object for the lifetime of the
    composite data place.
    """
    def _trampoline(result_ptr, c_coords, c_data_dims, c_grid_dims):
        coords = (c_coords.x, c_coords.y, c_coords.z, c_coords.t)
        data_dims = (c_data_dims.x, c_data_dims.y, c_data_dims.z, c_data_dims.t)
        grid_dims = (c_grid_dims.x, c_grid_dims.y, c_grid_dims.z, c_grid_dims.t)
        rx, ry, rz, rt = mapper(coords, data_dims, grid_dims)
        result_ptr[0].x = int(rx)
        result_ptr[0].y = int(ry)
        result_ptr[0].z = int(rz)
        result_ptr[0].t = int(rt)

    callback = _mapper_cfunc_type(_trampoline)
    c_ptr = ctypes.cast(callback, ctypes.c_void_p).value
    return (callback, c_ptr)

class AccessMode(IntFlag):
    NONE  = STF_NONE
    READ  = STF_READ
    WRITE = STF_WRITE
    RW    = STF_RW


def _logical_data_full(ctx, shape, fill_value, dtype=None, where=None, exec_place=None, name=None, *, no_export=False):
    """Shared implementation for ``context`` and ``stackable_context`` initializers."""
    if dtype is None:
        dtype = np.array(fill_value).dtype
    else:
        dtype = np.dtype(dtype)

    if exec_place is not None:
        if hasattr(exec_place, 'kind') and exec_place.kind == "host":
            raise NotImplementedError(
                "exec_place.host() is not yet supported for logical_data_full. "
                "Use exec_place.device() or omit exec_place parameter."
            )

    if no_export:
        ld = ctx.logical_data_empty(shape, dtype, name, no_export=True)
    else:
        ld = ctx.logical_data_empty(shape, dtype, name)

    try:
        from cuda.stf._experimental.fill_utils import init_logical_data
        init_logical_data(ctx, ld, fill_value, where, exec_place)
    except ImportError as e:
        raise RuntimeError("Fill support (cuda.core) is not available for logical_data_full") from e

    return ld


def _logical_data_default_dtype(dtype):
    return np.float64 if dtype is None else dtype


class stf_cai:
    """
    Wrapper that exposes CUDA Array Interface v3 for interop (torch, cupy, etc.).
    Supports dict-style access (e.g. obj['data']) for code that expects a CAI dict.
    """
    def __init__(self, ptr, tuple shape, dtype, stream=0):
        self.ptr = ptr               # integer device pointer
        self.shape = shape
        self.dtype = np.dtype(dtype)
        self.stream = int(stream)    # CUDA stream handle (int or 0)
        self.__cuda_array_interface__ = {
            'version': 3,
            'shape': self.shape,
            'typestr': self.dtype.str,     # e.g., '<f4' for float32
            'data': (self.ptr, False),     # (ptr, read-only?)
            'strides': None,               # or tuple of strides in bytes
            'stream': self.stream if self.stream != 0 else None,  # CAI v3: 0 disallowed
        }

    def __getitem__(self, key):
        return self.__cuda_array_interface__[key]

    def get(self, key, default=None):
        return self.__cuda_array_interface__.get(key, default)


# Shared "alive" sentinel used to safely no-op a child wrapper's __dealloc__
# when its parent (stackable_)context was already finalized.
#
# Implementation note: we use a ``cdef class`` with a single ``bint`` field
# rather than a Python list ``[True]`` because Python lists are GC-tracked
# mutable containers whose contents pytest's ``gc_collect_harder`` may clear
# (causing ``IndexError`` from an emptied list).  A ``cdef class`` instance
# with no Python-object members is *not* GC-tracked and cannot be mutated by
# the cycle collector, giving us a stable shared flag.
cdef class _AliveFlag:
    cdef bint alive

    def __cinit__(self):
        self.alive = True


# Python-only lifetime guard for framework-owned primary CUDA contexts.
#
# Rationale:
# - STF's C++ core assumes callers keep the CUDA context valid for the whole
#   lifetime of a context.
# - In Python that assumption is frequently violated by third-party frameworks
#   (Numba/PyTorch/CuPy) that share the runtime primary context and may release
#   it between tests or after wrapper objects go out of scope.
# - The pragmatic fix is therefore localized to the Python wrappers: when
#   Python creates an STF context, it also retains every visible primary
#   context and releases those retains only after STF finalize() returns.
#
# This keeps the interop workaround out of the C++ core while still protecting
# Python-created STF contexts against refcount-driven teardown of primary
# contexts by foreign libraries.
cdef class _PrimaryContextPin:
    cdef list _devices
    cdef bint _released

    def __cinit__(self):
        cdef int dev_count = 0
        cdef int ordinal
        cdef CUdevice dev = 0
        cdef CUcontext ctx = <CUcontext>NULL
        cdef CUresult status

        self._devices = []
        self._released = False

        status = cuInit(0)
        if status != 0:
            raise RuntimeError(
                f"failed to initialize CUDA driver for STF Python context pin (CUresult={status})"
            )

        status = cuDeviceGetCount(&dev_count)
        if status != 0:
            raise RuntimeError(
                f"failed to enumerate CUDA devices for STF Python context pin (CUresult={status})"
            )

        for ordinal in range(dev_count):
            status = cuDeviceGet(&dev, ordinal)
            if status != 0:
                self.release()
                raise RuntimeError(
                    f"failed to query CUDA device {ordinal} for STF Python context pin "
                    f"(CUresult={status})"
                )

            status = cuDevicePrimaryCtxRetain(&ctx, dev)
            if status != 0:
                self.release()
                raise RuntimeError(
                    f"failed to retain CUDA primary context for device {ordinal} "
                    f"(CUresult={status})"
                )

            self._devices.append(dev)

    cdef void release(self):
        cdef list devices
        cdef object dev_obj

        if self._released or self._devices is None:
            return

        devices = self._devices
        self._devices = None
        self._released = True

        for dev_obj in devices:
            # Best-effort cleanup: reset/teardown paths may already have touched
            # the primary context; the release is only to balance our retain.
            cuDevicePrimaryCtxRelease(<CUdevice>dev_obj)

    def __dealloc__(self):
        # Explicit-finalize policy: do not make CUDA driver calls from GC.
        # If a context leaks without finalize(), its primary-context retain is
        # intentionally abandoned until process exit.
        pass


cdef class logical_data:
    cdef stf_logical_data_handle _ld
    cdef stf_ctx_handle _ctx
